[package]
name = "client"
version = "0.1.0"
authors = ["Paul Dorehill"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared", features = ["client"] }
futures-signals = "0.3"
dominator = "0.5"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
lto = true
opt-level = "s"